8268183: tools/launcher/VersionCheck.java fails for jextract